Bug 93991 - combo-box, missing left-border pixels ...
Summary: combo-box, missing left-border pixels ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.0.2.1 rc
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.0.1
Keywords:
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2015-09-07 13:45 UTC by Michael Meeks
Modified: 2016-10-25 19:12 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
combo box (4.42 KB, image/png)
2015-09-07 13:47 UTC, Michael Meeks
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meeks 2015-09-07 13:45:53 UTC
It seems that the text area of some combo boxes over-renders the black drop-down surround when refreshing the contents; I guess some rendercontext / GL rendering / clipping issue. This is when using OpenGL on Windows. Picture attached.
Comment 1 Michael Meeks 2015-09-07 13:47:41 UTC
Created attachment 118499 [details]
combo box

Launch calc, and then click around several cells - as you move the combo entry refreshes with this unfortunate effect.
Comment 2 How can I remove my account? 2015-12-10 10:10:59 UTC
Can't reproduce in a couple of days old build, of d48b2477aa6c768761ed9b369196b0bcd9a5bc21 .
Comment 3 How can I remove my account? 2015-12-10 10:28:25 UTC
Ah, now when I look again, I do see it, sorry. I must have run without OpenGL after all.
Comment 4 Commit Notification 2015-12-11 13:32:32 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=edbe61b671bc4c384be914099ee8bcdfd8491f3a

tdf#93991: One pixel here or there, who is counting?

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-12-11 13:36:40 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ce12f0396d27b4119826bee9c30a24af9c9eb33d&h=libreoffice-5-1

tdf#93991: One pixel here or there, who is counting?

It will be available in 5.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Meeks 2015-12-11 22:59:08 UTC
Closing - thanks Tor ! =)