tdf#93991: One pixel here or there, who is counting?

<tools/gen.hxx> Rectangle, I love you.

Change-Id: Iaf7ae2930d6098349f04cd429cd35dffcaf7ca3b